# ai-symiosis

./: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.cjs  svelte.config.js  typedoc.json  vite.config.js
.github/workflows/: publish.yml
src/: app.html
src-tauri/: Cargo.toml  config-template.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  database_consistency_tests.rs  lib.rs  logging.rs  main.rs  search.rs  test_utils.rs  tests.rs  watcher.rs
src-tauri/src/commands/: config.rs  mod.rs  note_crud.rs  note_external.rs  note_search.rs  note_versions.rs  notes.rs  system.rs  window.rs
src-tauri/src/core/: errors.rs  mod.rs  state.rs
src-tauri/src/services/: database_service.rs  mod.rs  note_service.rs
src-tauri/src/test_utils/: database_testing.rs
src-tauri/src/tests/: atomic_operations.rs  cleanup_test.rs  concurrency.rs  config.rs  content_synchronization.rs  crud_operations.rs  database.rs  database_consistency.rs  directory_paths.rs  error_handling.rs  mod.rs  note_rendering.rs  search.rs  security.rs  test_utils.rs  validation.rs  watcher.rs
src-tauri/src/tests/test_utils/: database_testing.rs
src-tauri/src/utilities/: config_helpers.rs  file_safety.rs  mac_focus.rs  mod.rs  note_renderer.rs  paths.rs  strings.rs  validation.rs
src-tauri/tests/: cleanup_integration.rs
src/lib/: keyboardHandler.js  keyboardHandler.ts  test-utils.ts
src/lib/app/: appCoordinator.svelte.ts
src/lib/components/: AppLayout.svelte  ConfirmationDialog.svelte  DebugPanel.svelte  DeleteDialog.svelte  Editor.svelte  InputDialog.svelte  NoteList.svelte  NoteView.svelte  SearchInput.svelte  SettingsPane.svelte
src/lib/context/: app.svelte.ts
src/lib/core/: configManager.svelte.ts  configStateManager.svelte.ts  contentHighlighting.svelte.ts  contentManager.svelte.ts  contentNavigationManager.svelte.ts  dialogManager.svelte.ts  editorManager.svelte.ts  focusManager.svelte.ts  progressManager.svelte.ts  recentlyDeletedManager.svelte.ts  searchManager.svelte.ts  themeManager.svelte.ts  versionExplorerManager.svelte.ts
src/lib/services/: configService.svelte.ts  configService.test.ts  noteService.svelte.ts  noteService.test.ts  versionService.svelte.ts
src/lib/types/: config.ts
src/lib/ui/: AppLayout.svelte  CodeEditor.svelte  CodeMirrorEditor.svelte  ConfirmationDialog.svelte  DebugPanel.svelte  DeleteDialog.svelte  Editor.svelte  EditorModeManager.svelte  ErrorNotification.svelte  HintsPanel.svelte  InputDialog.svelte  NoteList.svelte  NoteView.svelte  Notification.svelte  ProgressOverlay.svelte  RecentlyDeleted.svelte  SearchInput.svelte  SettingsPane.svelte  SubtleProgressIndicator.svelte  SyntaxHighlighter.svelte  VersionExplorer.svelte
src/lib/utils/: appCentralManager.integration.test.ts  appCentralManager.svelte.ts  editorThemes.ts  (+19 more)
src/routes/: +page.svelte
src/tests/: test-utils.ts
static/css/: auto.css  dark.css  dark_colorblind.css  dark_dimmed.css  dark_high_contrast.css  light.css  light_colorblind.css
(+66 files in other folders)
