[package]
name = "Symiosis"
version = "0.2.2"
description = "Notes application inspired by Notational Velocity"
authors = ["Dionysis Athinaios"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "symiosis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3.1"
walkdir = "2"
open = "5.3.0"
comrak = "0.40.0"
html-escape = "0.2.13"
toml = "0.8.23"
home = "0.5.11"
rusqlite = { version = "0.37", features = ["bundled", "functions", "serde_json", "chrono"] }

[dev-dependencies]
tempfile = "3.20.0"

# Faster builds in debug mode
# [profile.dev]
# opt-level = 1
# incremental = true

# Faster builds for dependencies
# [profile.dev.package."*"]
# opt-level = 3
