[package]
name = "Symiosis"
version = "0.3.2"
description = "Notational Velocity inspired notes app with instant search, in place markdown rendering, and vim/emacs editing modes."
authors = ["Dionysis Athinaios"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "symiosis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3.1"
walkdir = "2"
open = "5.3.0"
pulldown-cmark = "0.13.0"
html-escape = "0.2.13"
toml = "0.8.23"
home = "0.5.11"
rusqlite = { version = "0.37", features = ["bundled", "functions", "serde_json", "chrono"] }
notify = "8.2.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.42"
regex = "1.0"
once_cell = "1.19"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.20.0"
serial_test = "3"

[[test]]
name = "cleanup_integration"
harness = false

# Faster builds in debug mode
# [profile.dev]
# opt-level = 1
# incremental = true

# Faster builds for dependencies
# [profile.dev.package."*"]
# opt-level = 3
